# rust_cli

./: Cargo.toml  Chat.xlsm  LICENSE  README.md
src/: main.rs
src/global/: global.rs
